@startuml CompleteClassDiagram
title CompleteClassDiagram
class ActivityDiagramBuilder #GhostWhite {
---
---
+ void CreateFromFile()
+ void CreateFromPath()
}
abstract class UMLDiagramBuilder #White {
- string _sourcepath
- int _maxsubpathdeep
- string _targetpath
- string _diagramfolder
- bool _createcompletediagram
- bool _force
---
+ string getSourcePath()
- Void setSourcePath(string value)
+ int getMaxSubPathDeep()
- Void setMaxSubPathDeep(int value)
+ string getTargetPath()
- Void setTargetPath(string value)
+ string getDiagramFolder()
+ Void setDiagramFolder(string value)
+ bool getCreateCompleteDiagram()
+ Void setCreateCompleteDiagram(bool value)
+ bool getForce()
- Void setForce(bool value)
---
+ abstract void CreateFromFile()
+ abstract void CreateFromPath()
+ {static} string[] ReadDefinesFromProjectFiles(string path)
}
class ClassDiagramBuilder #GhostWhite {
---
---
+ void CreateFromFile()
+ void CreateFromPath()
}
class PlantUMLApp #GhostWhite {
- {static} string _projectspath
- {static} string _targetpath
- DiagramBuilderType _diagrambuilder
- string _diagramfolder
- bool _createcompletediagram
- int _maxgenerationdepth
---
+ {static} string getProjectsPath()
+ {static} Void setProjectsPath(string value)
+ {static} string getTargetPath()
+ {static} Void setTargetPath(string value)
+ DiagramBuilderType getDiagramBuilder()
+ Void setDiagramBuilder(DiagramBuilderType value)
+ string getDiagramFolder()
+ Void setDiagramFolder(string value)
+ bool getCreateCompleteDiagram()
+ Void setCreateCompleteDiagram(bool value)
+ int getMaxGenerationDepth()
+ Void setMaxGenerationDepth(int value)
---
- {static} void ClassConstructing()
- {static} void ClassConstructed()
- void Constructing()
- void Constructed()
# MenuItem[] CreateMenuItems()
# void PrintHeader()
+ void Run(string[] args)
- void ChangeDiagramFolder()
+ void ChangeMaxGenerationDepth()
- void ChangeDiagramBuilder()
- void CreateDiagram(MenuItem menuItem, bool force)
}
abstract class ConsoleApplication #LightBlue {
}
class Program #GhostWhite {
---
---
+ {static} void Main(string[] args)
}
class SequenceDiagramBuilder #GhostWhite {
---
---
+ void CreateFromFile()
+ void CreateFromPath()
}
UMLDiagramBuilder <|-- ActivityDiagramBuilder
UMLDiagramBuilder <|-- ClassDiagramBuilder
ConsoleApplication <|-- PlantUMLApp
UMLDiagramBuilder <|-- SequenceDiagramBuilder
@enduml
